# polymer

rs-clob-client/: Cargo.toml
rs-clob-client/examples/clob/: authenticated.rs
rs-clob-client/src/: serde_helpers.rs
simple-bot/: .gitignore  Cargo.toml  README.md  trades.json
simple-bot/src/: approvals.rs  auth.rs  backtest.rs  cli.rs  feeds.rs  main.rs  orderbook.rs  redeem.rs  tracker.rs  trading.rs
simple-bot/src/strategies/: arbitrage.rs  bayesian.rs  frontload.rs  mod.rs  sniper.rs
site/: generate_images.py  index.html
